--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=restaurant-service
 spring.config.import=file:env.properties
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/${DB_DATABASE}
+spring.datasource.url= ${DB_DATABASE}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
